--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -10,7 +10,8 @@ services:
       - db-volume:/var/lib/postgresql/data
 
   api:
-    image: andprof/ac2_ca:latest
+    #image: andprof/ac2_ca:latest
+	image: felipeperrella/ac2_1:latest
     networks:
       - default  # Certifique-se de que está usando a rede adequada
     environment:
