--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:banco_AC2
+spring.datasource.url=jdbc:h2:mem:blog-praticandoAPI
 spring.datasource.username=sa
 spring.datasource.password=
 
